--- a/src/OperationsApp/package.json
+++ b/src/OperationsApp/package.json
@@ -25,6 +25,7 @@
     "fs": "0.0.1-security",
     "jquery": "^3.6.0",
     "ng2-search-filter": "^0.5.1",
+    "ngx-cookie-service": "^11.0.2",
     "rxjs": "~6.6.0",
     "sweetalert2": "^10.15.7",
     "tslib": "^2.0.0",
