--- a/src/OperationsApp/src/webConfig.json
+++ b/src/OperationsApp/src/webConfig.json
@@ -1,4 +1,7 @@
 {
     "UrlService" : "http://localhost:44354/",
-    "AnotherProperty" : "Another Value"
+    "CookieName" : "CookieNameSession",
+    "AnotherProperty" : "Another Value",
+    "MinCheckCookie" : 1,
+    "TokenExpirationTime": 14
 }
